<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_trivia_fact"
        android:title="@string/bottom_navigation_menu_trivia_item"
        android:icon="@drawable/ic_brain_48"
        />
    <item
        android:id="@+id/action_math_fact"
        android:title="@string/bottom_navigation_menu_math_item"
        android:icon="@drawable/ic_pi_48"
        />
    <item
        android:id="@+id/action_year_fact"
        android:title="@string/bottom_navigation_menu_year_item"
        android:icon="@drawable/ic_hourglass_48"
        />
    <item android:id="@+id/action_date_fact"
        android:title="@string/bottom_navigation_menu_date_item"
        android:icon="@drawable/ic_calendar_48"
        />
</menu>
